--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/styled": "^11.3.0",
+    "@zeit/next-css": "^1.0.1",
+    "bootstrap": "^5.0.0-beta3",
+    "framer-motion": "^4.1.16",
     "next": "10.2.0",
     "next-seo": "^4.24.0",
     "react": "17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "17.0.2"
   }
 }
