--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "dependencies": {
     "@emotion/styled": "^11.3.0",
     "@zeit/next-css": "^1.0.1",
+    "babel-preset-next": "^1.4.0",
     "bootstrap": "^5.0.0-beta3",
+    "file-loader": "^6.2.0",
     "framer-motion": "^4.1.16",
     "next": "10.2.0",
     "next-seo": "^4.24.0",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "url-loader": "^4.1.1"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.13.13"
   }
 }
