--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-next": "^1.4.0",
     "bootstrap": "^5.0.0-beta3",
     "bs-custom-file-input": "^1.3.4",
+    "emailjs-com": "^2.6.4",
     "framer-motion": "^4.1.16",
     "next": "10.2.0",
     "next-seo": "^4.24.0",
