--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "bs-custom-file-input": "^1.3.4",
     "emailjs-com": "^2.6.4",
     "framer-motion": "^4.1.16",
-    "next": "10.2.0",
+    "images": "^3.2.3",
+    "next": "^10.2.0",
+    "next-images": "^1.8.1",
     "next-seo": "^4.24.0",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "17.0.2",
+    "styled-components": "^5.3.0",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
